--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
     display: flex;
     justify-content:space-around;
     align-items: center;
-    background-color: transparent;
+    background-color: #ffffff;
     min-height: 12vh;
     font-family: "Montserrat", sans-serif;
     height: 0px;
@@ -77,7 +77,7 @@ li, a{
 button{
     margin-left: 20px;
     padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 1);
+    background-color: rgba(68, 175, 218, 1);
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3 ease 0s;
@@ -88,7 +88,7 @@ button{
 }
 
 button:hover{
-    background-color: rgba(0, 136, 169, 0.8);
+    background-color: rgba(82, 119, 240, 0.8);
 }
 /* Estilo Hero Banner */
 
